--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ethers": "5.7",
     "express": "^4.18.2",
-    "firebase-admin": "^11.10.1"
+    "firebase-admin": "^11.10.1",
+    "zksync-web3": "^0.14.3"
   },
   "scripts": {
     "start": "node index.js"
